tests/ui/traits/vtable/issue-97381.stderr
error[E0505]: cannot move out of `v` because it is borrowed
  --> $DIR/issue-97381.rs:26:14
   |
LL |     let v = [1, 2, 3]
   |         - binding `v` declared here
...
LL |     let el = &v[0];
   |               - borrow of `v` occurs here
LL |
LL |     for _ in v {
   |              ^ move out of `v` occurs here
LL |
LL |         println!("{}", ***el > 0);
   |                         ---- borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0505`.
